set og:url to fix open graph validator tool error
This open graph validator tool  https://developers.facebook.com/tools/debug/og/object/  currently complains because og:url meta tag is set to empty string.  So this is to fix to that.

Reading this http://stackoverflow.com/a/12237080/338265 "if og:url is anything other than the current page..."    I guess it's fairly normal for og:url to be pointed at the current page

....though maybe it's just as good to remove this meta tag. I don't know.  This also makes me wonder about twitter:url which is also blank.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property='og:site_name' content='Donate to OpenStreetMap' />
   <meta name='twitter:url' content='' />
   <meta name='twitter:domain' content='http://donate.osm.org/' />
-  <meta property='og:url' content='' />
+  <meta property='og:url' content='http://donate.openstreetmap.org/server2015/' />
   <meta name='twitter:title' content='Donate to OpenStreetMap' />
   <meta property='og:title' content='Donate to OpenStreetMap' />
   <meta name='twitter:description' content='OpenStreetMap is run and supported by volunteers like you. With more and more people helping to make great maps, we need bigger and faster servers to keep up with the demand. If you enjoy using or contributing to OpenStreetMap, please consider making a donation.' />
